[cs-ui] Demo app sidebar collapse - Fixed collapse issue on sidebar toggle

--- a/cs-ui-demo/src/App.scss
+++ b/cs-ui-demo/src/App.scss
@@ -83,6 +83,10 @@ body,
 			position: -webkit-sticky;
 			top: 0;
 			height: calc(100vh - 54px);
+
+			+ .components-preview-wrapper {
+				width: calc(100% - 15rem);
+			}
 		}
 
 		.components-list-search {
@@ -213,7 +217,7 @@ body,
 		top: 0;
 		height: calc(100vh - 54px);
 		background: transparent;
-		width: calc(100% - 15rem);
+		width: calc(100% - 1.5rem);
 
 		.sidebar-toggle {
 			display: flex;
